# ArchiveBox

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .npmignore  .pre-commit-config.yaml  .readthedocs.yaml  ArchiveBox.conf  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONATE.md  Dockerfile  Dockerfile.api  Dockerfile.simple  LICENSE  MANIFEST.in  PLUGIN_ENHANCEMENTS.md  Pipfile  README.md  SECURITY.md  SIMPLIFICATION_PLAN.md  STORAGE_CAS_PLAN.md  TEST_RESULTS.md  TODOS.md  TODO_archivebox_jsonl_cli.md  TODO_chrome_plugin_cleanup.md  TODO_cli_refactor.md  TODO_fs_migrations.md  TODO_hook_architecture.md  TODO_hook_concurrency.md  TODO_hook_statemachine_cleanup.md  TODO_process_tracking.md  _config.yml  archive  archive.py  archive_methods.py  archivebox.egg-info  (+27 more)
.claude/: settings.json  settings.local.json
.do/: deploy.template.yaml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  3-documentation_change.yml  bug_report.md  bug_report.yml  config.yml  documentation_change.md  documentation_change.yml  feature_request.md  feature_request.yml  question_or_discussion.md
.github/workflows/: appimage.yml  claude-code-review.yml  claude.yml  codeql-analysis.yml  codeql.yml  codesee-arch-diagram.yml  debian.yml  deploy-publicsite.yml  docker.yml  duplicate-issue-detection.yml  gh-md-toc.yml  gh-pages.yml  homebrew.yml  jekyll-gh-pages.yml  lint.yml  pip.yml  release-runner.yml  release.yml  test-parallel.yml  test.yml
appimage_dist/: archivebox.yml
archivebox/: .flake8  Architecture.md  ArchiveBox.conf  BACKGROUND_HOOKS_IMPLEMENTATION_PLAN.md  __init__.py  __main__.py  api_server.py  archive.py  archive_methods.py  archive_queue.py  base32_crockford.py  config.py  config_stubs.py  constants.py  env.py  hooks.py  index.py  links.py  logging.py  logging_util.py  logs.py  main.py  manage.py  monkey_patches.py  mypy.ini  package-lock.json  package.json  parse.py  peekable.py  purge.py  schema.py  settings.toml  static  stdlib_patches.py  system.py  tests.py  util.py  uuid_compat.py
archivebox-ts/: .gitignore  ARCHITECTURE.md  CHROME_SETUP.md  EXTRACTOR_GUIDE.md  QUICKSTART.md  README.md  TESTING.md  package-lock.json  package.json  tsconfig.json
archivebox-ts/extractors/: 2captcha  archive_org  dom  downloads  favicon  git  headers  htmltotext  images  infiniscroll  media  outlinks  pdf  puppeteer  readability  screenshot  singlefile  title  wget
archivebox-ts/src/: cli.ts  db.ts  extractors.ts  models.ts
archivebox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
archivebox/_ansible_unused/: ansible_utils.py  install_singlefile.yml
archivebox/abid_utils/: __init__.py  abid.py  admin.py  apps.py  models.py
archivebox/abx/: __init__.py  apps.py  hookspec.py  hookspec_archivebox.py  hookspec_django_apps.py  hookspec_django_settings.py  hookspec_django_urls.py  hookspec_pydantic_pkgr.py  manager.py
archivebox/actors/: __init__.py  actor.py  actor_crawl.py  apps.py  models.py  orchestrator.py  statemachine.py
archivebox/api/: __init__.py  admin.py  apps.py  archive.py  auth.py  middleware.py  models.py  routes_auth.py  routes_cli.py  routes_core.py  serializers.py  tests.py  urls.py  v1_actors.py  v1_api.py  v1_auth.py  v1_cli.py  v1_core.py  v1_crawls.py  v1_machine.py  v1_personas.py  v1_workers.py  views.py
archivebox/archivebox/: settings.py  urls.py
archivebox/base_models/: __init__.py  abid.py  admin.py  apps.py  models.py
archivebox/cli/: __init__.py  archivebox.py  archivebox_add.py  archivebox_archiveresult.py  archivebox_binary.py  archivebox_config.py  archivebox_crawl.py  archivebox_crawl_compat.py  archivebox_extract.py  archivebox_help.py  archivebox_info.py  archivebox_init.py  archivebox_install.py  archivebox_ipfs.py  archivebox_list.py  archivebox_machine.py  archivebox_manage.py  archivebox_mcp.py  archivebox_oneshot.py  archivebox_orchestrator.py  archivebox_persona.py  archivebox_pluginmap.py  archivebox_process.py  archivebox_remove.py  archivebox_run.py  archivebox_schedule.py  archivebox_search.py  archivebox_server.py  (+13 more)
archiver/: archive.py  archive_methods.py  config.py  index.py  links.py  parse.py  purge.py  util.py
assets/: README.md
bookmark_archiver/: archive_methods.py  config.py  index.py  links.py  parse.py  util.py
brew_dist/: archivebox.rb
conf/: archiver.conf  default.ini  user.conf  user.ini
etc/: ArchiveBox.conf.default  README.md  archive-box.service  archivebox.service  fly.toml  nginx.conf  package.json  sonic.cfg  uwsgi.ini
examples/: firefox_export.html  pinboard.json  pinboard_export.json
old/: Architecture.md  TODO_Process_cleanup_unification.md  TODO_chrome_plugin_cleanup.md  TODO_fix_migration_path.md  TODO_fs_migrations.md  TODO_hook_architecture.md  TODO_hook_statemachine_cleanup.md  TODO_rename_extractor_to_plugin.md  archivebox.ts
orm-comparison/: DRIZZLE_FORMATTING_GUIDE.md  FORMATTING_COMPARISON.md  MIGRATIONS_AND_TYPES.md  README.md  schema.drizzle.readable.ts  schema.drizzle.ts  schema.mikroorm.ts  schema.prisma  schema.typeorm.ts
publicsite/: index.html  shadcn-theme.css  styles.css
requirements/: base.txt  development.txt
templates/: index.html  index_row.html  link_index.html  link_index_fancy.html
tests/: conftest.py  fixtures.py  test_add.py  test_api.py  test_args.py  test_cli_add.py  test_cli_config.py  test_cli_crawl.py  test_cli_extract.py  test_cli_init.py  test_cli_install.py  test_cli_manage.py  test_cli_oneshot.py  test_cli_remove.py  test_cli_server.py  test_cli_shell.py  test_cli_snapshot.py  test_cli_update.py  test_cli_version.py  test_extract.py  test_extractors.py  test_init.py  test_ipfs_integration.py  test_list.py  test_oneshot.py  test_recursive_crawl.py  test_remove.py  test_schedule.py  test_search.py  test_snapshot.py  test_title.py  test_update.py  test_util.py  test_version.py  tests.py
website/: 404.html  CNAME  _config.yml  index.html  index.txt  shadcn-theme.css
(+1425 files in other folders)
